aruco detector node + lauunch file remap + odometry?

--- a/package.xml
+++ b/package.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>hoi_taskPriority</name>
+  <name>hoi_taskpriority</name>
   <version>0.0.0</version>
   <description>The HOI_taskPriority package</description>
 
